--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ add_executable(cadt
         src/data_structures/node.h
         src/data_structures/stack.cpp
         src/data_structures/stack.h
-        lib/testing/assert.cpp
-        lib/testing/assert.h
+        lib/testing/test_assert.cpp
+        lib/testing/test_assert.h
         lib/testing/test.cpp
         lib/testing/test.h
         lib/testing/test_runner.cpp
