refactor: seperate benchmark code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,8 @@ add_executable(cadt
         test/ds_test_runner.cpp
         test/ds_test_runner.h
         test/node_test.cpp
-        test/node_test.h test/linked_list_test.cpp test/linked_list_test.h)
+        test/node_test.h
+        test/linked_list_test.cpp
+        test/linked_list_test.h
+        benchmark/linked_list_benchmark.cpp
+        benchmark/linked_list_benchmark.h)
