--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,4 @@ add_executable(cadt
         test/linked_list_test.cpp
         test/linked_list_test.h
         benchmark/linked_list_benchmark.cpp
-        benchmark/linked_list_benchmark.h)
+        benchmark/linked_list_benchmark.h src/data_structures/queue.cpp src/data_structures/queue.h)
