refactor: update namespaces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,13 @@ add_executable(cadt
         lib/testing/test_suite.h
         test/ds_test_runner.cpp
         test/ds_test_runner.h
-        test/node_test.cpp
-        test/node_test.h
-        test/linked_list_test.cpp
-        test/linked_list_test.h
+        test/node_test/node_test.cpp
+        test/node_test/node_test.h
+        test/linked_list_test/linked_list_test.cpp
+        test/linked_list_test/linked_list_test.h
         benchmark/linked_list_benchmark.cpp
         benchmark/linked_list_benchmark.h
         src/data_structures/queue.cpp
         src/data_structures/queue.h
-        test/queue_test.cpp
-        test/queue_test.h)
+        test/queue/queue_test.cpp
+        test/queue/queue_test.h)
